--- a/_data/staff/1-chuck.yml
+++ b/_data/staff/1-chuck.yml
@@ -1,4 +1,4 @@
-name: Chuck Rifici
+name: CHUCK RIFICI
 title: Chairman & Chief Executive Officer
 bio: |
   Chuck is a true pioneer of the North American cannabis industry having founded Canopy Growth (formerly Tweed Marijuana) and building it into 500,000 square feet of thriving marijuana grow capacity as its CEO. Today, Canopy Growth is worth over $2 billion and recognized as a world class cannabis producer.
