input new content

--- a/_data/staff/3-brad.yml
+++ b/_data/staff/3-brad.yml
@@ -1,4 +1,4 @@
-name: Brad Mcnamee
-title: Chief Infrastructure Officer
-bio: Brad McNamee is a second-generation mechanical contractor specializing in HVAC design and design build services.<br><br>Most recently, Brad has focused his efforts in the cannabis industry after having been introduced to Tweed in 2013.  Brad was a key member of the original ground breaking team tasked with pioneer-ing a large scale indoor environmental production platform, capable of delivering high yield, high quality product.  Brad went on to help design and develop post production environments for trimming and processing, drying and curing, encapsulating and storing, medical marijuana.  Since then, Brad has worked along side, and lead, an amazing group highly qualified individuals in the Medical Marijuana Industry.
-img: svgs/asset-3.svg
+name: "Brad Mcnamee"
+title: "Chief Infrastructure Officer"
+bio: "Brad is a mechanical contractor specializing in HVAC design and design build services.<br><br>Most recently, he has focused his efforts in the cannabis industry. Brad was a key member of the original Tweed Marijuana groundbreaking team tasked with pioneer-ing a large scale indoor environmental production platform capable of delivering high yield, high quality product. Brad went on to help design and develop post-production environments for trimming and processing, drying and curing, and encapsulating and storing medical marijuana. Since then, Brad has worked alongside and led an amazing group of highly qualified individuals in the medical marijuana industry."
+img: "svgs/asset-3.svg"
