--- a/_data/members.yml
+++ b/_data/members.yml
@@ -15,10 +15,10 @@
 
 - name: "Jeff Tung, CFA"
   title: "Chief Financial Officer & Chief Operating Officer"
-  bio: "Jeff brings significant senior leadership and finance expertise to the Cannabis Wheaton team. He has managed more than USD$3 billion of deals in the telecom, banking, insurance and technology industries.<br><br>Prior to Cannabis Wheaton, he was the co-founder of CPS Management Partners, where he led the acquisition and subsequent operation of Windley Ely. Under his leadership, Windley Ely became the largest workers’ compensation claims administrator in Canada, returning IRRs in excess of 50% to investors at the time of his departure. Other prior work experience includes engagement manager at McKinsey & Company, as well as various project and team management roles at SAP.<br><br>Jeff holds a MBA from the Richard Ivey School of Business, graduating at the top of his class, as well as a Bachelors of Computer Engineering from the University of British Columbia."
+  bio: "Prior to Cannabis Wheaton, he was the co-founder of CPS Management Partners, where he led the acquisition of multiple businesses in the insurance administration industry.<br><br>Under his leadership, CPS Management Partners and its portfolio companies became the largest workers’ compensation claims administrator in Canada, returning IRRs in excess of 50% to investors. Other prior work experience includes engagement manager at McKinsey & Company, as well as various project and team management roles at SAP."
   img: "svgs/team-letters-04.svg"
 
 - name: "Peter Shearer"
-  title: "Chief Cultivation Officer"
+  title: "VP of Cultivation"
   bio: "Over the past decade, Peter has been refining his cannabis knowledge and skill set. Under the MMAR, he was instrumental in assisting with design, construction, implementation and operation of numerous facilities with a goal of maximizing efficiency while controlling costs. As of late, Peter has also been a consultant to Supreme Pharmaceuticals Inc. on the development of the 7ACRES hybrid greenhouse.  <br><br>Recently, Peter has been a consultant to the cannabis industry working closely with several high profile brands and companies. Peter is constantly sought after for his expertise in cultivation efficiencies as well as his knowledge of extraction techniques. His experience has provided him with valuable insights into trends and changes in the cannabis industry."
   img: "svgs/team-letters-05.svg"
