team fix, contact button

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 permalink: pretty
-baseurl: "https://robcodonnell.github.io/cannabiswheaton"
+baseurl: ""
 sass:
   sass_dir: _sass
   style: compressed
