jeff bio update

--- a/_data/management.yml
+++ b/_data/management.yml
@@ -5,7 +5,7 @@
 
 - name: "Jeff Tung, CFA"
   title: "Chief Financial Officer & Chief Operating Officer"
-  bio: "Prior to Cannabis Wheaton, Jeff was the co-founder of CPS Management Partners, where he led the acquisition of multiple businesses in the insurance administration industry. Under his leadership, CPS Management Partners and its portfolio companies became the largest workers’ compensation claims administrator in Canada, returning IRRs in excess of 50% to investors. Other prior work experience includes engagement manager at McKinsey & Company, as well as various project and team management roles at SAP."
+  bio: "Jeff brings significant senior leadership and finance expertise to the Cannabis Wheaton team. He has managed more than USD$3 Billion of deals in the Telecom, Banking, Insurance and Technology industries.<br><br>Prior to Cannabis Wheaton, Jeff was the co-founder of CPS Management Partners, where he led the acquisition of multiple businesses in the insurance administration industry. Under his leadership, CPS Management Partners and its portfolio companies became the largest workers’ compensation claims administrator in Canada, returning IRRs in excess of 50% to investors. Other prior work experience includes Engagement Manager at McKinsey & Company, as well as various project and team management roles at SAP.<br><br>Jeff holds an MBA from the Richard Ivey School of Business, graduating at the top of his class as well as a Bachelors of Computer Engineering from the University of British Columbia."
   img: "svgs/team-letters-04.svg"
 
 - name: "Ian Rapsey"
