--- a/_data/press.yml
+++ b/_data/press.yml
@@ -1,41 +1,24 @@
-- date: "May 19, 2017"
-  source: "MarketWired"
-  headline: "Cannabis Wheaton Appoints Industry Leading Master Grower"
-  subhead: ""
-  link: "http://www.marketwired.com/press-release/cannabis-wheaton-appoints-industry-leading-master-grower-2217571.htm"
-
-- date: "May 19, 2017"
-  source: "MarketWired"
-  headline: "Cannabis Wheaton Congratulates Its Partner Beleave Inc."
-  subhead: ""
-  link: "http://www.marketwired.com/press-release/cannabis-wheaton-congratulates-its-partner-beleave-inc-2217601.htm"
-
-- date: "May 17, 2017"
-  source: "MarketWired"
-  headline: "Cannabis Wheaton Featured on CBC"
-  subhead: ""
-  link: "http://www.marketwired.com/press-release/cannabis-wheaton-featured-on-cbc-2216902.htm"
-
-- date: "May 15, 2017"
-  source: "MarketWired"
-  headline: "Cannabis Wheaton Features Partner Broken Coast Cannabis"
-  subhead: ""
-  link: "http://www.marketwired.com/press-release/cannabis-wheaton-features-partner-broken-coast-cannabis-2216218.htm"
+- date: "May 11, 2017"
+  source: "Baystreet.ca"
+  headline: "Cannabis Wheaton Changing the Landscape; Game Changer in the Cannabis Market"
+  link: "http://www.baystreet.ca/articles/stockstowatch.aspx?id=1815"
 
 - date: "May 10, 2017"
-  source: "MarketWired"
-  headline: "Cannabis Wheaton, the World's First Cannabis Streaming Company, Unveils Platform Partners"
-  subhead: ""
-  link: "http://www.marketwired.com/press-release/cannabis-wheaton-worlds-first-cannabis-streaming-company-unveils-platform-partners-tsx-venture-cbw-2215272.htm"
+  source: "CBC News"
+  headline: "Marijuana startups get new funding from 'streaming' deals"
+  link: "http://www.cbc.ca/news/business/canada-marijuana-streaming-financing-1.4106715"
+
+- date: "May 9, 2017"
+  source: "New Cannabis Ventures"
+  headline: "Why Cannabis Streaming is Taking Off"
+  link: "https://www.newcannabisventures.com/why-cannabis-streaming-is-taking-off/"
 
 - date: "May 8, 2017"
-  source: "MarketWired"
-  headline: "Cannabis Wheaton and its Powerhouse Team Enables the Evolution of the Traditional Licensed Producer - LP 2.0."
-  subhead: ""
-  link: "http://www.newswire.ca/news-releases/cannabis-wheaton-and-its-powerhouse-team-enables-the-evolution-of-the-traditional-licensed-producer---lp-20-621627753.html"
+  source: "Toronto Star (Canadian Press)"
+  headline: "Marijuana industry pioneer launches cannabis streaming firm"
+  link: "https://www.thestar.com/business/2017/05/08/marijuana-industry-pioneer-launches-cannabis-streaming-firm.html"
 
-- date: "May 5, 2017"
-  source: "MarketWired"
-  headline: "Cannabis Wheaton the World's First Marijuana Streaming Company Announces Appointment of Industry Leading Team"
-  subhead: ""
-  link: "http://www.marketwired.com/press-release/cannabis-wheaton-worlds-first-marijuana-streaming-company-announces-appointment-industry-2214512.htm"
+- date: "May 8, 2017"
+  source: "Financial Post"
+  headline: "Marijuana pioneer launches first pot streaming company to finance budding entrepreneurs"
+  link: "http://business.financialpost.com/investing/marijuana-pioneer-launches-first-pot-streaming-company-to-finance-budding-entrepreneurs"
