fixes on news page, team edits

--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -1,3 +1,15 @@
+- date: "June 6, 2017"
+  source: "MarketWired"
+  headline: "Cannabis Wheaton Announces Revised Offering Terms and Lead Order News Release"
+  subhead: ""
+  link: "http://www.marketwired.com/press-release/cannabis-wheaton-announces-revised-offering-terms-and-lead-order-news-release-tsx-venture-cbw-2220473.htm"
+
+- date: "June 5, 2017"
+  source: "MarketWired"
+  headline: "Cannabis Wheaton Provides Update on Private Placement and Related Matters"
+  subhead: ""
+  link: "http://www.marketwired.com/press-release/cannabis-wheaton-provides-update-on-private-placement-and-related-matters-tsx-venture-cbw-2220007.htm"
+
 - date: "June 2, 2017"
   source: "MarketWired"
   headline: "ABcann & Cannabis Wheaton Sign Win-Win Deal to Expand Production -- CFN Media"
