--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -1,3 +1,9 @@
+- date: "June 8, 2017"
+  source: "MarketWired"
+  headline: "Cannabis Wheaton Appoints Prominent Industry Figure Hugo Alves as President"
+  subhead: ""
+  link: "http://m.marketwired.com/press-release/cannabis-wheaton-appoints-prominent-industry-figure-hugo-alves-as-president-tsx-venture-cbw-2220820.htm"
+
 - date: "June 6, 2017"
   source: "MarketWired"
   headline: "Cannabis Wheaton Announces Revised Offering Terms and Lead Order News Release"
