--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -1,3 +1,9 @@
+- date: "June 15, 2017"
+  source: "MarketWired"
+  headline: "REPEAT - Cannabis Wheaton Appoints Notable Industry Player Michael Lickver as EVP of Strategy; Updates Financing"
+  subhead: ""
+  link: "http://www.marketwired.com/press-release/repeat-cannabis-wheaton-appoints-notable-industry-player-michael-lickver-as-evp-strategy-tsx-venture-cbw-2222021.htm"
+
 - date: "June 8, 2017"
   source: "MarketWired"
   headline: "Cannabis Wheaton Appoints Prominent Industry Figure Hugo Alves as President"
