news releases, management update

--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -1,3 +1,15 @@
+- date: "June 29, 2017"
+  source: "MarketWired"
+  headline: "Cannabis Wheaton Announces Closing of $50.2 Million Offering"
+  subhead: ""
+  link: "http://www.marketwired.com/press-release/cannabis-wheaton-announces-closing-of-502-million-offering-tsx-venture-cbw-2224532.htm"
+
+- date: "June 23, 2017"
+  source: "MarketWired"
+  headline: "Cannabis Wheaton Announces Offering Update"
+  subhead: ""
+  link: "http://www.marketwired.com/press-release/cannabis-wheaton-announces-offering-update-tsx-venture-cbw-2223496.htm"
+
 - date: "June 15, 2017"
   source: "MarketWired"
   headline: "REPEAT - Cannabis Wheaton Appoints Notable Industry Player Michael Lickver as EVP of Strategy; Updates Financing"
